Levitation import of page 726 rev 9059.

--- a/0-/README.mediawiki
+++ b/0-/README.mediawiki
@@ -53,7 +53,7 @@ Report bugs to the bug tracker at: http://bugs.xmms2.xmms.se/ (account registrat
 Linus, you can just post the reports to the mailing list)
 
 == See Also ==
-* [[About|About XMMS2]]
+* [[About|About XMMS2]] [http://ro.offsidebet.com/ro-RO/netent_splash detalii]
 * [[FAQ|Frequently Asked Questions]]
 
 [[Category: Questions and answers]]
